tests/snapshots/integration_test__basic_types.snap
---
source: tests/integration_test.rs
expression: output
---
#[derive(Debug, Clone, PartialEq)]
pub enum ProcessUnknownXType {
    String(String),
    Other(serde_json::Value),
}

#[derive(Debug, Clone, PartialEq)]
pub enum ProcessUnknownXTypeOrString {
    ProcessUnknownXType(ProcessUnknownXType),
    String(String),
}

#[derive(Debug, Clone, PartialEq)]
struct User {
    name: String,
    age: f64,
    active: bool,
    tags: Vec<String>,
    metadata: HashMap<String, String>,
}

#[derive(Debug, Clone, PartialEq)]
struct Config {
    host: String,
    port: Option<f64>,
    label: Option<String>,
    timeout: Option<f64>,
}

fn swap(pair: (String, f64)) -> (f64, String) {
    (pair.1, pair.0)
}

#[derive(Debug, Clone, Copy, PartialEq, Eq)]
enum Direction {
    North,
    South,
    East,
    West,
}

impl Direction {
    pub fn as_str(&self) -> &str {
        match self {
            Direction::North => "north",
            Direction::South => "south",
            Direction::East => "east",
            Direction::West => "west",
        }
    }
}

impl std::fmt::Display for Direction {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{}", self.as_str())
    }
}

fn describeDirection(d: Direction) -> String {
    format!("Going {}", d)
}

fn logMessage(msg: String) {
    println!("{}", msg);
}

fn throwError(msg: String) -> Result<std::convert::Infallible, String> {
    Err(msg.to_string())
}

fn processNumbers(nums: Vec<f64>) -> f64 {
    let mut total = 0.0;
    for n in nums {
        total = total + n;
    }
    total
}

fn processNames(names: Vec<String>) -> f64 {
    names.len() as f64
}

fn processUnknown(x: ProcessUnknownXType) -> String {
    if let ProcessUnknownXType::String(x) = x { x } else { "unknown".to_string() }
}

#[derive(Debug, Clone, PartialEq)]
enum ID {
    String(String),
    F64(f64),
}
