tests/snapshots/integration_test__break_continue.snap
---
source: tests/integration_test.rs
expression: output
---
fn findFirst(items: Vec<f64>, target: f64) -> f64 {
    let mut result = 0.0;
    for item in items {
        if item == target {
            result = item;
            break;
        }
    }
    result
}

fn nestedSearch(matrix: Vec<Vec<f64>>) -> bool {
    let mut found = false;
    'outer: for row in matrix {
        for cell in row {
            if cell == 0.0 {
                found = true;
                break 'outer;
            }
        }
    }
    found
}

fn labeledWhile() -> f64 {
    let mut i = 0.0;
    'outer: while i < 10.0 {
        let mut j = 0.0;
        while j < 10.0 {
            if i + j > 15.0 {
                break 'outer;
            }
            j = j + 1.0;
        }
        i = i + 1.0;
    }
    i
}

fn skipValues(items: Vec<f64>) -> f64 {
    let mut sum = 0.0;
    for item in items {
        if item == 0.0 {
            continue;
        }
        sum = sum + item;
    }
    sum
}

fn labeledContinue(matrix: Vec<Vec<f64>>) -> f64 {
    let mut count = 0.0;
    'outer: for row in matrix {
        for cell in row {
            if cell < 0.0 {
                continue 'outer;
            }
        }
        count = count + 1.0;
    }
    count
}
