tests/snapshots/integration_test__builtin_api_batch.snap
---
source: tests/integration_test.rs
expression: output
---
fn sumArray(arr: Vec<f64>) -> f64 {
    arr.iter().fold(0.0, |acc, x| acc + x)
}

fn findIndex(arr: Vec<f64>, target: f64) -> f64 {
    arr.iter().position(|item| *item == target).map(|i| i as f64).unwrap_or(-1.0)
}

fn joinWords(arr: Vec<String>, sep: String) -> String {
    arr.join(&sep)
}

fn reverseArray(arr: Vec<f64>) {
    let mut arr = arr;
    arr.reverse();
}

fn sortArray(arr: Vec<f64>) {
    let mut arr = arr;
    arr.sort_by(|a, b| a.partial_cmp(b).unwrap());
}

fn sortDescending(arr: Vec<f64>) {
    let mut arr = arr;
    arr.sort_by(|a, b| (b - a).partial_cmp(&0.0).unwrap());
}

fn sliceArray(arr: Vec<f64>) -> Vec<f64> {
    arr[1..3].to_vec()
}

fn spliceArray(arr: Vec<f64>) -> Vec<f64> {
    let mut arr = arr;
    arr.drain(1..3).collect::<Vec<_>>()
}

fn circleArea(r: f64) -> f64 {
    std::f64::consts::PI * r * r
}

fn signOf(x: f64) -> f64 {
    x.signum()
}

fn truncate(x: f64) -> f64 {
    x.trunc()
}

fn naturalLog(x: f64) -> f64 {
    x.ln()
}

fn isWholeNumber(x: f64) -> bool {
    x.fract() == 0.0
}
