tests/snapshots/integration_test__callable_interface.snap
---
source: tests/integration_test.rs
expression: output
---
trait GetValue {
    fn call_0(&self, key: String) -> String;
}

trait GetCookie {
    fn call_0(&self, c: String) -> String;
    fn call_1(&self, c: String, key: String) -> f64;
}

#[derive(Debug, Clone, PartialEq)]
struct Body {
    text: String,
    json: bool,
}

type BodyCache = Body;
