tests/snapshots/integration_test__callable_interface_async.snap
---
source: tests/integration_test.rs
expression: output
---
#[derive(Debug, Clone, PartialEq)]
pub enum F64OrString {
    String(String),
    F64(f64),
}

trait AsyncFetcher {
    async fn call_0(&self, url: String) -> String;
}

#[derive(Debug, Clone, Copy, PartialEq, Eq, Hash)]
struct AsyncFetcherFetchDataImpl;

impl AsyncFetcherFetchDataImpl {
    async fn inner(&self, url: String) -> String {
        url
    }
}

impl AsyncFetcher for AsyncFetcherFetchDataImpl {
    async fn call_0(&self, url: String) -> String {
        self.inner(url).await
    }
}

const fetchData: AsyncFetcherFetchDataImpl = AsyncFetcherFetchDataImpl;

trait AsyncProcessor {
    async fn call_0(&self, data: String) -> String;
    async fn call_1(&self, data: String, flag: bool) -> f64;
}

#[derive(Debug, Clone, Copy, PartialEq, Eq, Hash)]
struct AsyncProcessorProcessDataImpl;

impl AsyncProcessorProcessDataImpl {
    async fn inner(&self, data: String, flag: Option<bool>) -> F64OrString {
        F64OrString::String(data)
    }
}

impl AsyncProcessor for AsyncProcessorProcessDataImpl {
    async fn call_0(&self, data: String) -> String {
        match self.inner(data, None).await {
            F64OrString::String(v) => {
                v
            }
            _ => {
                unreachable!()
            }
        }
    }

    async fn call_1(&self, data: String, flag: bool) -> f64 {
        match self.inner(data, Some(flag)).await {
            F64OrString::F64(v) => {
                v
            }
            _ => {
                unreachable!()
            }
        }
    }
}

const processData: AsyncProcessorProcessDataImpl = AsyncProcessorProcessDataImpl;
