tests/snapshots/integration_test__callable_interface_inner.snap
---
source: tests/integration_test.rs
expression: output
---
#[derive(Debug, Clone, PartialEq)]
pub enum F64OrString {
    String(String),
    F64(f64),
}

trait GetCookie {
    fn call_0(&self, c: String) -> String;
    fn call_1(&self, c: String, key: String) -> f64;
}

#[derive(Debug, Clone, Copy, PartialEq, Eq, Hash)]
struct GetCookieGetCookieImpl;

impl GetCookieGetCookieImpl {
    fn inner(&self, c: String, key: Option<String>) -> F64OrString {
        F64OrString::String(c)
    }
}

impl GetCookie for GetCookieGetCookieImpl {
    fn call_0(&self, c: String) -> String {
        match self.inner(c, None) {
    F64OrString::String(v) => {
        v
    }
    _ => {
        unreachable!()
    }
}
    }

    fn call_1(&self, c: String, key: String) -> f64 {
        match self.inner(c, Some(key)) {
    F64OrString::F64(v) => {
        v
    }
    _ => {
        unreachable!()
    }
}
    }
}

const getCookie: GetCookieGetCookieImpl = GetCookieGetCookieImpl;
