tests/snapshots/integration_test__callable_interface_param_rename.snap
---
source: tests/integration_test.rs
expression: output
---
trait StringMapper {
    fn call_0(&self, input: String) -> String;
}

#[derive(Debug, Clone, Copy, PartialEq, Eq, Hash)]
struct StringMapperMapStringImpl;

impl StringMapperMapStringImpl {
    fn inner(&self, data: String) -> String {
        data
    }
}

impl StringMapper for StringMapperMapStringImpl {
    fn call_0(&self, input: String) -> String {
        self.inner(input)
    }
}

const mapString: StringMapperMapStringImpl = StringMapperMapStringImpl;
